--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -4,14 +4,15 @@
             "offer" : "Oferta",
             "portfolio" : "Portfolio",
             "contact" : "Kontakt",
-            "homePageDescription" : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit. Vivamus rhoncus tincidunt aliquam. Sed et mauris ut ex commodo faucibus. Integer sit amet porta felis. Aliquam pulvinar, odio eget dignissim egestas, lacus tortor dignissim urna, at ultricies ipsum quam pulvinar mi. Integer feugiat ante odio, id semper ipsum fermentum eget. Mauris a erat maximus, pulvinar sapien eu, hendrerit massa.Lorem ipsum dolor sit amet.",
-            "send" : "Send",
+            "homePageDescription_1" : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit. Vivamus rhoncus tincidunt aliquam. Sed et mauris ut ex commodo faucibus. Integer sit amet porta felis. Aliquam pulvinar, odio eget dignissim egestas, lacus tortor dignissim urna, at ultricies ipsum quam pulvinar mi. Integer feugiat ante odio, id semper ipsum fermentum eget. Mauris a erat maximus, pulvinar sapien eu, hendrerit massa.Lorem ipsum dolor sit amet.",
+            "homePageDescription_2" : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit. Vivamus rhoncus tincidunt aliquam. Sed et mauris ut ex commodo faucibus. Integer sit amet porta felis. Aliquam pulvinar, odio eget dignissim egestas, lacus tortor dignissim urna, at ultricies ipsum quam pulvinar mi. Integer feugiat ante odio, id semper ipsum fermentum eget. Mauris a erat maximus, pulvinar sapien eu, hendrerit massa.Lorem ipsum dolor sit amet.",
+            "send" : "Wyślij",
             "cardTitleOne" : "Lorem Ipsum",
             "cardTitleTwo" : "Lorem Ipsum",
             "cardTitleThree" : "Lorem Ipsum",
-            "cardDescriptionOne" : "Lorem Ipsum",
-            "cardDescriptionTwo" : "Lorem Ipsum",
-            "cardDescriptionThree" : "Lorem Ipsum",
+            "cardDescriptionOne" : "Lorem Ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit.",
+            "cardDescriptionTwo" : "Lorem Ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit.",
+            "cardDescriptionThree" : "Lorem Ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit.",
             "contactFormTitle" : "UMÓWMY SIĘ NA SPOTKANIE",
             "name" : "Imię",
             "emailAddress" : "Adres email",
@@ -21,7 +22,7 @@
             "messagePlaceholder" : "Wiadomość...",
             "offerTitleOne" : "MAKEUP",
             "offerTextOne" : "Makijaż ślubny, okolicznościowy lub sesyjny - 15f",
-            "offerTitleTwo": "Pamiętaj rownież o:",
+            "offerTitleTwo": "Prosze przeczytaj uważnie",
             "offerTextTwo_1" : "Przed makijażem wyreguluj brwi. Makijaż z wyregulowanymi brwiami wygląda ładniej i estetyczniej",
             "offerTextTwo_2" : "Zrób delikatny peeling twarzy dzień przed makijażem. Pozbycie się martwego martwego naskórka powoduje że nakładane prokutky lepiej scalają sie ze soba. Pamiętaj jednak aby robić to deikatnie by nie podrażnic skóry.",
             "offerTextTwo_3" : "Na makijaż przychodzimy nieumalowane (chodzi rownież o brwi i tusz do rzes), ani nienakremowane. Twarz musi być 'bez niczego', dodatkowy demakijaż przedluży czas usługi.",
@@ -29,6 +30,12 @@
             "offerTextTwo_5" : "Nie trzyj skóry podczas zmywania - kosmetyki użyte do makijażu sa trwałe więc użyj jakiegoś olejku lub balsamu do demakijażu aby rozpuścić warstwy makijażu, następnie użyj ulubionego żelu do mycia twarzy",
             "offerTextTwo_6" : "To tylo makijaż będzie trwały ale wszelkie mechaniczne uszkodzenia jak pocieranie, dotykanie twarzy skróci jego trwałość",
             "footer" : "Created with passion by Mateusz Szostek",
-            "seeMore" : "Zobacz więcej"
+            "seeMore" : "Zobacz więcej",
+            "text-404": "Uuups, coś poszło nie tak, nie znaleźliśmy tej strony ;(",
+            "cooperateTitle" : "Współpraca",
+            "cooperateText" : "Jeśli chcesz ze mną współpracować, proszę wyślij wiadomość email lub zadzwoń na numer telefonu podany w sekcji kontakt. Dziekuje!",
+            "privacy" : "Prywatność",
+            "cooperation" : "Współpraca",
+            "facebook" : "Facebook"
       
 }
