--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,6 +4,7 @@
             "offer" : "Offer",
             "portfolio" : "Portfolio",
             "contact" : "Contact",
+            "contactLink" : "Let's book appointment",
             "homePageDescription" : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit. Vivamus rhoncus tincidunt aliquam. Sed et mauris ut ex commodo faucibus. Integer sit amet porta felis. Aliquam pulvinar, odio eget dignissim egestas, lacus tortor dignissim urna, at ultricies ipsum quam pulvinar mi. Integer feugiat ante odio, id semper ipsum fermentum eget. Mauris a erat maximus, pulvinar sapien eu, hendrerit massa.Lorem ipsum dolor sit amet.",
             "send" : "Send",
             "cardTitleOne" : "Lorem Ipsum",
