--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,7 +5,7 @@
             "portfolio" : "Portfolio",
             "contact" : "Contact",
             "contactLink" : "Let's book appointment",
-            "homePageDescription" : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit. Vivamus rhoncus tincidunt aliquam. Sed et mauris ut ex commodo faucibus. Integer sit amet porta felis. Aliquam pulvinar, odio eget dignissim egestas, lacus tortor dignissim urna, at ultricies ipsum quam pulvinar mi. Integer feugiat ante odio, id semper ipsum fermentum eget. Mauris a erat maximus, pulvinar sapien eu, hendrerit massa.Lorem ipsum dolor sit amet.",
+            "homePageDescription_1" : "Hello Im Anna Im make up passionate. Thanks to make up I can expres myself. If you are looking for make up for photo sesions any circumstances. Write to me on messenger I will answer for any questions. Invite also on my facebook 4 Beauty Make up. Kisses Anna 😉",
             "send" : "Send",
             "cardTitleOne" : "Lorem Ipsum",
             "cardTitleTwo" : "Lorem Ipsum",
@@ -16,19 +16,22 @@
             "contactFormTitle" : "LET'S MEET TOGETHER",
             "name" : "Name",
             "emailAddress" : "Email address",
-            "message" : "Wiadomość",
+            "message" : "Message",
             "namePlaceholder" : "Your name...",
             "emailAddressPlaceholder" : "Your address email...",
             "messagePlaceholder" : "Your message...",
             "offerTitleOne" : "MAKEUP",
-            "offerTextOne" : "Makijaż ślubny, okolicznościowy lub sesyjny - 15f",
-            "offerTitleTwo": "Pamiętaj rownież o:",
-            "offerTextTwo_1" : "Przed makijażem wyreguluj brwi. Makijaż z wyregulowanymi brwiami wygląda ładniej i estetyczniej",
-            "offerTextTwo_2" : "Zrób delikatny peeling twarzy dzień przed makijażem. Pozbycie się martwego martwego naskórka powoduje że nakładane prokutky lepiej scalają sie ze soba. Pamiętaj jednak aby robić to deikatnie by nie podrażnic skóry.",
-            "offerTextTwo_3" : "Na makijaż przychodzimy nieumalowane (chodzi rownież o brwi i tusz do rzes), ani nienakremowane. Twarz musi być 'bez niczego', dodatkowy demakijaż przedluży czas usługi.",
-            "offerTextTwo_4" : "Pamiętaj aby nie klaść sie spać w makijażu zawsze zmywaj go po zakończonej okoliczności na którą był wykonany ",
-            "offerTextTwo_5" : "Nie trzyj skóry podczas zmywania - kosmetyki użyte do makijażu sa trwałe więc użyj jakiegoś olejku lub balsamu do demakijażu aby rozpuścić warstwy makijażu, następnie użyj ulubionego żelu do mycia twarzy",
-            "offerTextTwo_6" : "To tylo makijaż będzie trwały ale wszelkie mechaniczne uszkodzenia jak pocieranie, dotykanie twarzy skróci jego trwałość",
+            "offerTextOne" : "Wedding, occasional or session makeup- 15f",
+            "offerTitleTwo": "Remember about a few steps before make up:",
+            "offerTextTwo_1" : "Before make up make eyebrow shaping. With nice eyebrows make up looks muvh beter and more estetic. ",
+            "offerTextTwo_2" : "One day before make up service make gentle peeling of your face to get rid of dead skin, thanks that make up will be more durable. Remember to do it gentle. We dont want skin to be irritated. After this step put your favourite moisturizing cream.",
+            "offerTextTwo_3" : "On make up service day come with nothing on your face no cream, no primer, no maskara and anything on eyebrows. Face needs to be naked. Extra make up removal makes service will take longer .",
+            "offerTextTwo_4" : "Do not go sleep with make up. Remeber to remove make up after circumstance. ",
+            "offerTextTwo_5" : "Dont rub when remove make up. Cosmetic which I use for make up are permanently you can use your I suggest to use some oil for example coconut oil just make sure you are not alergic on kind of oli which you use to remove make up also you an use special cleansing balm to melt and remove make up. Later use your favourite face wash gel. Thanks that remove makeup without ant problems. ",
+            "offerTextTwo_6" : "Remember its only make up will be permanently but any mechanical damage like rubbing,  touching face cut short durability. ",
+            "offerTextTwo_7" : "Be on time. Delay more than 20 min make the service will not be performed. ",
+            "offerTextTwo_8" : "Unfortunately I am not commuting to my customers. ",    
+            "offerTextTwo_9" : "Kisses Anna 😉",
             "footer" : "Created with passion by Mateusz Szostek",
             "seeMore" : "See more",
             "text-404": "Ooops, something went wrong, we could not find the page ;(",
@@ -36,7 +39,10 @@
             "cooperateText" : "If you want to cooperate with me please call me or send me an email message.",
             "privacy" : "Privacy",
             "cooperation" : "Cooperation",
-            "facebook" : "Facebook"
+            "facebook" : "Facebook",
+            "openingHours_1" : "Opening hours:",
+            "openingHours_2" : "Sat-Sun between",
+            "openingHours_3" : "10.00-14.00"
    
       
 }
