--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,12 +7,12 @@
             "contactLink" : "Let's book appointment",
             "homePageDescription_1" : "Hello Im Anna Im make up passionate. Thanks to make up I can expres myself. If you are looking for make up for photo sesions any circumstances. Write to me on messenger I will answer for any questions. Invite also on my facebook 4 Beauty Make up. Kisses Anna 😉",
             "send" : "Send",
-            "cardTitleOne" : "Lorem Ipsum",
-            "cardTitleTwo" : "Lorem Ipsum",
-            "cardTitleThree" : "Lorem Ipsum",
-            "cardDescriptionOne" : "Lorem Ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit.",
-            "cardDescriptionTwo" : "Lorem Ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit.",
-            "cardDescriptionThree" : "Lorem Ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit.",
+            "cardTitleOne" : "Facebook Funpage",
+            "cardTitleTwo" : "Offer",
+            "cardTitleThree" : "My work",
+            "cardDescriptionOne" : "Stay up to date - like my profile on Facebook.",
+            "cardDescriptionTwo" : "Do you want to change your look for a special occasion? I will do it for you! See my offer.",
+            "cardDescriptionThree" : "Get inspired - see my works.",
             "contactFormTitle" : "LET'S MEET TOGETHER",
             "name" : "Name",
             "emailAddress" : "Email address",
