--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -7,12 +7,12 @@
             "contactLink" : "Umówmy się na spotkanie",
             "homePageDescription_1" : "Cześć jestem Ania jestem pasjonatką makijażu. Makijaż daje mi możliwość wyrażenia siebie. Jeśli szukasz makijażu na sesje zdjęciową lub jakiekolwiek okoliczności napisz do mnie na messanger. Odpowiem na wszelkie pytania. Zapraszam rownież na mojego facebooka 4Beauty Make up. Buziaki Ania  😉",
             "send" : "Wyślij",
-            "cardTitleOne" : "Lorem Ipsum",
-            "cardTitleTwo" : "Lorem Ipsum",
-            "cardTitleThree" : "Lorem Ipsum",
-            "cardDescriptionOne" : "Lorem Ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit.",
-            "cardDescriptionTwo" : "Lorem Ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit.",
-            "cardDescriptionThree" : "Lorem Ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget aliquet elit.",
+            "cardTitleOne" : "Facebook Funpage",
+            "cardTitleTwo" : "Oferta",
+            "cardTitleThree" : "Moje prace",
+            "cardDescriptionOne" : "Bądź na bierząco - polub mój profil na faceboku.",
+            "cardDescriptionTwo" : "Chcesz zmienić swój wygląd na wyjątkową okazję? Zrobie to za Ciebie! Zobacz moją ofertę.",
+            "cardDescriptionThree" : "Zainspiruj się - zobacz moje prace.",
             "contactFormTitle" : "UMÓWMY SIĘ NA SPOTKANIE",
             "name" : "Imię",
             "emailAddress" : "Adres email",
