Translation Bug Fix

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,7 +7,7 @@
             "contactLink" : "Let's book appointment",
             "homePageDescription_1" : "Hello Im Anna Im make up passionate. Thanks to make up I can expres myself. If you are looking for make up for photo sesions any circumstances. Write to me on messenger I will answer for any questions. Invite also on my facebook 4 Beauty Make up. Kisses Anna 😉",
             "send" : "Send",
-            "cardTitleOne" : "Facebook Funpage",
+            "cardTitleOne" : "Facebook Fanpage",
             "cardTitleTwo" : "Offer",
             "cardTitleThree" : "My work",
             "cardDescriptionOne" : "Stay up to date - like my profile on Facebook.",
