--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -7,7 +7,7 @@
             "contactLink" : "Umówmy się na spotkanie",
             "homePageDescription_1" : "Cześć jestem Ania jestem pasjonatką makijażu. Makijaż daje mi możliwość wyrażenia siebie. Jeśli szukasz makijażu na sesje zdjęciową lub jakiekolwiek okoliczności napisz do mnie na messanger. Odpowiem na wszelkie pytania. Zapraszam rownież na mojego facebooka 4Beauty Make up. Buziaki Ania  😉",
             "send" : "Wyślij",
-            "cardTitleOne" : "Facebook Funpage",
+            "cardTitleOne" : "Facebook Fanpage",
             "cardTitleTwo" : "Oferta",
             "cardTitleThree" : "Moje prace",
             "cardDescriptionOne" : "Bądź na bierząco - polub mój profil na faceboku.",
