Changed author of website in every section

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -32,7 +32,7 @@
             "offerTextTwo_7" : "Be on time. Delay more than 20 min make the service will not be performed. ",
             "offerTextTwo_8" : "Unfortunately I am not commuting to my customers. ",    
             "offerTextTwo_9" : "Kisses Anna 😉",
-            "footer" : "Created with passion by Mateusz Szostek",
+            "footer" : "Created with passion by CodeArtist",
             "seeMore" : "See more",
             "text-404": "Ooops, something went wrong, we could not find the page ;(",
             "cooperateTitle" : "Cooperation",
