--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -1,55 +1,51 @@
 {
- 
-            "home" : "Strona Główna",
-            "offer" : "Oferta",
-            "portfolio" : "Moje Przykładowe Prace",
-            "contact" : "Kontakt",
-            "contactLink" : "Umówmy się na spotkanie",
-            "homePageDescription_1" : "Cześć jestem Ania jestem pasjonatką makijażu. Makijaż daje mi możliwość wyrażenia siebie. Jeśli szukasz makijażu na sesje zdjęciową lub jakiekolwiek okoliczności napisz do mnie na messanger. Odpowiem na wszelkie pytania. Zapraszam rownież na mojego facebooka 4Beauty Make up. Buziaki Ania  😉",
-            "send" : "Wyślij",
-            "cardTitleOne" : "Facebook Fanpage",
-            "cardTitleTwo" : "Oferta",
-            "cardTitleThree" : "Moje prace",
-            "cardDescriptionOne" : "Bądź na bierząco - polub mój profil na faceboku.",
-            "cardDescriptionTwo" : "Chcesz zmienić swój wygląd na wyjątkową okazję? Zrobie to za Ciebie! Zobacz moją ofertę.",
-            "cardDescriptionThree" : "Zainspiruj się - zobacz moje prace.",
-            "contactFormTitle" : "UMÓWMY SIĘ NA SPOTKANIE",
-            "name" : "Imię",
-            "emailAddress" : "Adres email",
-            "message" : "Wiadomość",
-            "namePlaceholder" : "Twoje imię...",
-            "emailAddressPlaceholder" : "Twój adres email...",
-            "messagePlaceholder" : "Wiadomość...",
-            "offerTitleOne" : "MAKEUP",
-            "offerTextOne" : "Makijaż ślubny, okolicznościowy lub sesyjny - 15f",
-            "offerTitleTwo": "Prosze przeczytaj uważnie",
-            "offerTextTwo_1" : "Przed makijażem wyreguluj brwi. Makijaż z wyregulowanymi brwiami wygląda ładniej i estetyczniej.",
-            "offerTextTwo_2" : "Zrób delikatny peeling twarzy dzień przed makijażem. Pozbycie się martwego martwego naskórka powoduje że nakładane prokutky lepiej scalają sie ze soba. Pamiętaj jednak aby robić to deikatnie by nie podrażnic skóry.",
-            "offerTextTwo_3" : "Na makijaż przychodzimy nieumalowane (chodzi rownież o brwi i tusz do rzes), ani nienakremowane. Twarz musi być 'bez niczego', dodatkowy demakijaż przedluży czas usługi.",
-            "offerTextTwo_4" : "Pamiętaj aby nie klaść sie spać w makijażu zawsze zmywaj go po zakończonej okoliczności na którą był wykonany. ",
-            "offerTextTwo_5" : "Nie trzyj skóry podczas zmywania - kosmetyki użyte do makijażu sa trwałe więc użyj jakiegoś olejku lub balsamu do demakijażu aby rozpuścić warstwy makijażu, następnie użyj ulubionego żelu do mycia twarzy.",
-            "offerTextTwo_6" : "To tylko makijaż, będzie trwały ale wszelkie mechaniczne uszkodzenia jak pocieranie, dotykanie twarzy skróci jego trwałość.",
-            "offerTextTwo_7" : "Bądź na czas. Spóźnienie powyżej 20 min sprawi ze usługa nie zostanie wykonana.",
-            "offerTextTwo_8" : "Nie dojeżdżam do klientek.",    
-            "offerTextTwo_9" : "Buziaki Ania 😉",
-            "footer" : "Created with passion by Mateusz Szostek",
-            "seeMore" : "Zobacz więcej",
-            "text-404": "Uuups, coś poszło nie tak, nie znaleźliśmy tej strony ;(",
-            "cooperateTitle" : "Współpraca",
-            "cooperateText" : "Jeśli chcesz ze mną współpracować, proszę wyślij wiadomość email lub zadzwoń na numer telefonu podany w sekcji kontakt. Dziekuje!",
-            "privacy" : "Prywatność",
-            "cooperation" : "Współpraca",
-            "facebook" : "Facebook",
-            "openingHours_1" : "Godziny otwarcia:",
-            "openingHours_2" : "Sob-Ndz pomiędzy",
-            "openingHours_3" : "10.00-14.00",
+  "home": "Strona Główna",
+  "offer": "Oferta",
+  "portfolio": "Moje Przykładowe Prace",
+  "contact": "Kontakt",
+  "contactLink": "Umówmy się na spotkanie",
+  "homePageDescription_1": "Cześć jestem Ania jestem pasjonatką makijażu. Makijaż daje mi możliwość wyrażenia siebie. Jeśli szukasz makijażu na sesje zdjęciową lub jakiekolwiek okoliczności napisz do mnie na messanger. Odpowiem na wszelkie pytania. Zapraszam rownież na mojego facebooka 4Beauty Make up. Buziaki Ania  😉",
+  "send": "Wyślij",
+  "cardTitleOne": "Facebook Fanpage",
+  "cardTitleTwo": "Oferta",
+  "cardTitleThree": "Moje prace",
+  "cardDescriptionOne": "Bądź na bierząco - polub mój profil na faceboku.",
+  "cardDescriptionTwo": "Chcesz zmienić swój wygląd na wyjątkową okazję? Zrobie to za Ciebie! Zobacz moją ofertę.",
+  "cardDescriptionThree": "Zainspiruj się - zobacz moje prace.",
+  "contactFormTitle": "UMÓWMY SIĘ NA SPOTKANIE",
+  "name": "Imię",
+  "emailAddress": "Adres email",
+  "message": "Wiadomość",
+  "namePlaceholder": "Twoje imię...",
+  "emailAddressPlaceholder": "Twój adres email...",
+  "messagePlaceholder": "Wiadomość...",
+  "offerTitleOne": "MAKEUP",
+  "offerTextOne": "Makijaż ślubny, okolicznościowy lub sesyjny - 15f",
+  "offerTitleTwo": "Prosze przeczytaj uważnie",
+  "offerTextTwo_1": "Przed makijażem wyreguluj brwi. Makijaż z wyregulowanymi brwiami wygląda ładniej i estetyczniej.",
+  "offerTextTwo_2": "Zrób delikatny peeling twarzy dzień przed makijażem. Pozbycie się martwego martwego naskórka powoduje że nakładane prokutky lepiej scalają sie ze soba. Pamiętaj jednak aby robić to deikatnie by nie podrażnic skóry.",
+  "offerTextTwo_3": "Na makijaż przychodzimy nieumalowane (chodzi rownież o brwi i tusz do rzes), ani nienakremowane. Twarz musi być 'bez niczego', dodatkowy demakijaż przedluży czas usługi.",
+  "offerTextTwo_4": "Pamiętaj aby nie klaść sie spać w makijażu zawsze zmywaj go po zakończonej okoliczności na którą był wykonany. ",
+  "offerTextTwo_5": "Nie trzyj skóry podczas zmywania - kosmetyki użyte do makijażu sa trwałe więc użyj jakiegoś olejku lub balsamu do demakijażu aby rozpuścić warstwy makijażu, następnie użyj ulubionego żelu do mycia twarzy.",
+  "offerTextTwo_6": "To tylko makijaż, będzie trwały ale wszelkie mechaniczne uszkodzenia jak pocieranie, dotykanie twarzy skróci jego trwałość.",
+  "offerTextTwo_7": "Bądź na czas. Spóźnienie powyżej 20 min sprawi ze usługa nie zostanie wykonana.",
+  "offerTextTwo_8": "Nie dojeżdżam do klientek.",
+  "offerTextTwo_9": "Buziaki Ania 😉",
+  "footer": "Created with passion by CodeArtist",
+  "seeMore": "Zobacz więcej",
+  "text-404": "Uuups, coś poszło nie tak, nie znaleźliśmy tej strony ;(",
+  "cooperateTitle": "Współpraca",
+  "cooperateText": "Jeśli chcesz ze mną współpracować, proszę wyślij wiadomość email lub zadzwoń na numer telefonu podany w sekcji kontakt. Dziekuje!",
+  "privacy": "Prywatność",
+  "cooperation": "Współpraca",
+  "facebook": "Facebook",
+  "openingHours_1": "Godziny otwarcia:",
+  "openingHours_2": "Sob-Ndz pomiędzy",
+  "openingHours_3": "10.00-14.00",
 
-            
-            "meta_contact" : "To jest strona kontaktowa. Możesz skontaktować się z 4beauty makeup wypełniając formularz i wysyłając wiadomość. Możesz również zadzwonić pod podany numer telefonu. ",
-            "meta_cooperation" : "Zapraszam do współpracy. Jestem otwarta na wszelkie propozycje współpracy. Proszę wypełnić formularz, napisać lub zadzwonić w celu ustalenia szczegółów. ",
-            "meta_portfolio" : "Oto moje przykładowe prace zadowolonych klientów. Zdjęcia przedstawiją wykonany przeze mnie makijaż, zawarty w mojej ofercie internetowej. Zapraszam do oglądania zdjęć.",
-            "meta_offer" : "Zobacz ceny 4beautymakeup. Znajdziesz tu również instrukcje, jak przygotować się do makijażu. Moja oferta jest prosta i mam najlepsze ceny w regionie.",
-            "meta_home" : "Witamy w 4BeautyMakeUp. Moje usługi sprawią, że będziesz wyglądać wyjątkowo na każdą okazję. Napisz lub zadzwoń i umów się na spotkanie."
-
-      
+  "meta_contact": "To jest strona kontaktowa. Możesz skontaktować się z 4beauty makeup wypełniając formularz i wysyłając wiadomość. Możesz również zadzwonić pod podany numer telefonu. ",
+  "meta_cooperation": "Zapraszam do współpracy. Jestem otwarta na wszelkie propozycje współpracy. Proszę wypełnić formularz, napisać lub zadzwonić w celu ustalenia szczegółów. ",
+  "meta_portfolio": "Oto moje przykładowe prace zadowolonych klientów. Zdjęcia przedstawiją wykonany przeze mnie makijaż, zawarty w mojej ofercie internetowej. Zapraszam do oglądania zdjęć.",
+  "meta_offer": "Zobacz ceny 4beautymakeup. Znajdziesz tu również instrukcje, jak przygotować się do makijażu. Moja oferta jest prosta i mam najlepsze ceny w regionie.",
+  "meta_home": "Witamy w 4BeautyMakeUp. Moje usługi sprawią, że będziesz wyglądać wyjątkowo na każdą okazję. Napisz lub zadzwoń i umów się na spotkanie."
 }
